--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,5 +1,5 @@
 ---
-title: Hello, world
+title: Mediacat Studios
 ---
-%h1 Hello, world
-
+%h1.heading Welcome to the future online home of mediacat studios
+%p We're too busy making other awesome things right now to put up a fancy website, so check back later.
