--- a/source/assets/stylesheets/base/_typography.scss
+++ b/source/assets/stylesheets/base/_typography.scss
@@ -12,7 +12,7 @@ h4,
 h5,
 h6 {
   font-family: $heading-font-family;
-  font-size: modular-scale(1);
+  font-size: modular-scale(4);
   line-height: $heading-line-height;
   margin: 0 0 $small-spacing;
 }
@@ -27,7 +27,7 @@ a {
   transition: color $base-duration $base-timing;
 
   &:hover {
-    color: shade($action-color, 25%);
+  color: $action-hover-color;
   }
 
   &:focus {
