--- a/source/assets/stylesheets/base/_typography.scss
+++ b/source/assets/stylesheets/base/_typography.scss
@@ -11,6 +11,7 @@ h3,
 h4,
 h5,
 h6 {
+  color: $heading-color;
   font-family: $heading-font-family;
   font-size: modular-scale(4);
   line-height: $heading-line-height;
