--- a/source/assets/stylesheets/base/_variables.scss
+++ b/source/assets/stylesheets/base/_variables.scss
@@ -24,7 +24,8 @@ $light-gray: #ddd;
 
 // Font Colors
 $base-font-color: $dark-gray;
-$action-color: $blue-gray;
+$heading-color: $blue-gray;
+$action-color: $light-blue;
 $action-hover-color: $bright-blue;
 
 // Border
@@ -32,7 +33,7 @@ $base-border-color: $light-gray;
 $base-border: 1px solid $base-border-color;
 
 // Background Colors
-$base-background-color: #fff;
+$base-background-color: $beige;
 $secondary-background-color: tint($base-border-color, 75%);
 
 // Focus
